<resources>
    <string name="app_name">Protectora</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_login">Inicio Sesión</string>
    <string name="prompt_usuario">Usuario</string>
    <string name="prompt_clave">Clave</string>
    <string name="action_iniciar_sesion">Iniciar sesión</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="bienvenida">"Bienvenida !"</string>
    <string name="usuario_incorrecto">Usuario incorrecto</string>
    <string name="clave_incorrecta">Clave debe tener más de 5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="limpiar">Limpiar</string>
    <string name="recordar_credenciales">Recordar credenciales</string>
</resources>
